fix: fix swiper game cards overlapping filter select option, fix: make cursor pointer on filter select option
Now filter select option will be overlapping swiper game cards as it as intendeed, add z-index 40 to the parent wrapper of filter component

--- a/front-end/echoverse/src/assets/index.css
+++ b/front-end/echoverse/src/assets/index.css
@@ -69,3 +69,7 @@ select:-webkit-autofill:focus {
 .swiper-button-prev {
     color: #645bf0;
 }
+
+.swiper-wrapper, .swiper {
+    z-index: 10;
+}
